<resources>
    <string name="app_name">Speedrun Viewer</string>

    <!-- Drawer Strings -->
    <string name="addToFavourites">Add to Favourites</string>
    <string name="gameNamePrompt">Search for a Game</string>
    <string name="categoryHeader">Categories</string>

    <!-- Search Page Fragment Strings -->
    <string name="searchPrompt">Enter the Game Below</string>
    <string name="searchHint">Game Name...</string>
    <string name="searchButton">Browse</string>
    <string name="notificationText">New runs for Favourited Games:</string>

    <!-- Run Page Fragment Strings -->
    <string name="rank">Rank</string>
    <string name="runner">Runner</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
</resources>
