<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tyler.finalproject.BrowseRuns"
    android:orientation="vertical"
    android:layout_margin="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            style="@style/runListHeaderTheme"

            android:textAlignment="center"
            android:layout_weight="10"
            android:text="@string/rank"/>
        <TextView
            style="@style/runListHeaderTheme"

            android:layout_weight="40"
            android:textAlignment="center"
            android:text="@string/runner"/>
        <TextView
            style="@style/runListHeaderTheme"
            android:layout_weight="25"
            android:textAlignment="center"
            android:text="@string/time"/>
        <TextView
            style="@style/runListHeaderTheme"
            android:layout_weight="25"
            android:textAlignment="center"
            android:text="@string/date"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBarRuns"
            style="@style/progressBarTheme"/>

        <ListView
            android:id="@+id/runList"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:divider="@color/colorPrimaryDark"
            android:dividerHeight="10dp">
        </ListView>
    </LinearLayout>
</LinearLayout>
