<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tyler.finalproject.SearchPage"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="25dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchPrompt"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"/>
    <AutoCompleteTextView android:id="@+id/userInput"
        android:completionThreshold="1"
        android:inputType="textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchHint"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:textColorHint="#777777"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="15dp"/>
    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:max="100"/>
    <Button android:id="@+id/browseGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        android:onClick="browseGame"
        android:textColor="#000000"
        android:layout_marginBottom="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/notificationText"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView android:id="@+id/runNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </ScrollView>
</LinearLayout>
